fixed text align for popular drink paragraph

--- a/bountiful/styles/base.css
+++ b/bountiful/styles/base.css
@@ -131,6 +131,11 @@ nav a:hover{
     width: 32.3%;
 }
 
+.popular p{
+    width: 80%;
+    margin-left: 10%;
+}
+
 .popular img{
     height: 250px;
     border: 1px solid #672337;
